fix: Popup tip not dark in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -43,12 +43,14 @@
   }
 }
 
-body.dark .mapboxgl-ctrl-group > button > span {
-  filter: invert(1);
-}
-
-body.dark .mapboxgl-ctrl-attrib-button {
-  filter: invert(1);
+body.dark {
+  .mapboxgl-ctrl-group > button > span,
+  .mapboxgl-ctrl-attrib-button {
+    filter: invert(1);
+  }
+  .mapboxgl-popup-tip {
+    @apply border-t-background;
+  }
 }
 
 @layer base {
